<resources>
    <string name="app_name">Book Mate</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_bookmark">Bookmark</string>
    <string name="title_explore">Explore</string>
    <string name="service_unavailable">Service Unavailable</string>

    <!--    common-->
    <string name="submit">Submit</string>
    <string name="next">Next</string>

    <!--    welcome page-->
    <string name="title_welcome_1">Welcome Title 1!</string>
    <string name="title_welcome_2">Welcome Title 2!</string>
    <string name="title_welcome_3">Welcome Title 3!</string>
    <string name="title_welcome_4">Welcome Title 4!</string>
    <string name="desc_welcome_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vel odio et sapien sagittis imperdiet. Quisque tristique scelerisque dui.</string>
    <string name="desc_welcome_2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vel odio et sapien sagittis imperdiet. Quisque tristique scelerisque dui.</string>
    <string name="desc_welcome_3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vel odio et sapien sagittis imperdiet. Quisque tristique scelerisque dui.</string>
    <string name="desc_welcome_4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vel odio et sapien sagittis imperdiet. Quisque tristique scelerisque dui.</string>

    <!--    Sign in & Register-->
    <string name="sign_in">Sign In</string>
    <string name="sign_in_title">Welcome back,</string>
    <string name="sign_in_msg">Please sign in to continue</string>
    <string name="get_started">Get Started</string>
    <string name="register">Register</string>
    <string name="choose_image">Choose Image</string>
    <string name="no_image">No Image</string>
    <string name="register_msg">Please register to create an account</string>
    <string name="fullname">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="minimum_character">Minimum 8 characters</string>
    <string name="lower_case">Contains lower case</string>
    <string name="upper_case">Contains upper case</string>
    <string name="ic_password_check_desc">check icon</string>
    <string name="doesnt_match">Password doesn\'t match</string>
    <string name="already_have_account">Already have account?</string>
    <string name="doesnt_have_account">Doesn\'t have account?</string>
    <string name="register_success">Registration successful!</string>
    <string name="login_success">Enjoy your reads!</string>

    <!--    Home-->
    <string name="for_you">Recommended for you</string>
    <string name="for_you2">Your tailored picks</string>
    <string name="no_relevant">No relevant books</string>
    <string name="searchbar_hint">Search title or author..</string>
    <string name="based_on_history">Based on your history</string>
    <string name="based_on_bookmarks">Suggestions from bookmarks</string>
    <string name="welcome_back">Hello!</string>

    <!--    Genre Preference-->
    <string name="genre">Genre</string>
    <string name="preference_title">Preferred read?</string>
    <string name="preference_subtitle">Pick 5 genres to customize your home feed</string>

    <!--    Book Detail-->
    <string name="book_synopsis">Synopsis</string>
    <string name="dummy_synopsis">Elspeth needs a monster. The monster might be her. Elspeth Spindle needs more than luck to stay safe in the eerie, mist-locked kingdom of Blunder—she needs a monster. She calls him the Nightmare, an ancient, mercurial spirit trapped in her head. He protects her. He keeps her secrets. But nothing comes for free, especially magic. When Elspeth meets a mysterious highwayman on the forest road, her life takes a drastic turn. Thrust into a world of shadow and deception, she joins a dangerous quest to cure Blunder from the dark magic infecting it. And the highwayman? He just so happens to be the King’s nephew, Captain of the most dangerous men in Blunder…and guilty of high treason. Together they must gather twelve Providence Cards—the keys to the cure. But as the stakes heighten and their undeniable attraction intensifies, Elspeth is forced to face her darkest secret yet: the Nightmare is slowly taking over her mind. And she might not be able to stop him.</string>
    <string name="give_review">Give Review</string>
    <string name="synopsis">Synopsis</string>
    <string name="review">Review</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="img_bg">Background</string>
    <string name="book_detail">Book Detail</string>
    <string name="publisher">Publisher</string>
    <string name="published_year">Published Year</string>
    <string name="pages">Pages</string>
    <string name="isbn">ISBN</string>
    <string name="no_review">No reviews available</string>
    <string name="cover">Book Cover</string>
    <string name="lorem_1">lorem</string>
    <string name="reviewer">Reviewer</string>
    <string name="rating">Rating</string>
    <string name="review_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vel odio et sapien sagittis imperdiet.</string>
    <string name="review_date">dd MM yyyy</string>
    <string name="by_author">by %1$s</string>

    <!--    Profile-->
    <string name="reading_list">Reading List</string>
    <string name="number">0 </string>
    <string name="book_reviewed">Book Reviewed</string>
    <string name="recent_books">Recent Books</string>
    <string name="start_explore">Start explore books!</string>
    <string name="log_out">Log Out</string>
    <string name="logout_msg">Sure you want to log out?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>

    <!--    Bookmark-->
    <string name="your_reading">Your Reading List</string>
    <string name="book_title">Book Title</string>
    <string name="no_bookmark">No bookmarks yet</string>

    <!--    Add Review-->
    <string name="rate">RATE</string>
    <string name="review_hint">What is the reason for the rating?</string>
    <string name="send_review">Send Review</string>

    <!--    Explore-->
    <string name="no_genre">Couldn\'t get genre data. Try again later</string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vel odio et sapien sagittis imperdiet. Quisque tristique scelerisque dui. Vestibulum vel porttitor ante.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>