<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="?attr/fragmentBackground"
    android:layout_height="match_parent"
    tools:context=".ui.addReview.AddReviewActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:textAlignment="center"
        android:textColor="?attr/titleColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/title" />

    <TextView
        android:id="@+id/tv_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:textAlignment="center"
        android:textColor="?attr/subtitleColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        tools:text="@string/author" />

    <ImageView
        android:id="@+id/img_cover"
        android:layout_width="150dp"
        android:layout_height="225dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/cover"
        android:elevation="10dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_author"
        tools:src="@tools:sample/avatars" />

    <LinearLayout
        android:id="@+id/area_rating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rating_background"
        android:elevation="4dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_cover">

        <TextView
            android:id="@+id/tv_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate"
            android:textColor="?attr/titleColor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.example.bookmate.components.CheckboxRatingView
            android:id="@+id/checkbox_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/review"
        android:textColor="?attr/titleColor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/area_rating" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed_review"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/review_hint"
        app:boxBackgroundColor="?attr/fieldBackground"
        app:hintTextColor="?attr/fieldHintColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_review">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:gravity="top"
            android:inputType="text"
            android:lines="5"
            android:maxLines="5"
            android:minHeight="108dp"
            android:padding="8dp"
            android:scrollHorizontally="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_send_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/send_review"
        android:textAllCaps="false"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_review" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/btn_send_next"
        app:layout_constraintEnd_toEndOf="@id/btn_send_next"
        app:layout_constraintStart_toStartOf="@id/btn_send_next"
        app:layout_constraintTop_toTopOf="@id/btn_send_next"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>